--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,16 +1,19 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "Talks and Presentations"
 permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
+{% include base_path %}
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
-
-{% endif %}
-
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+10. Oral presentation (2025): PyGRF: An improved Python Geographical Random Forest model and case studies in public health and natural disasters, *the 2nd National Conference on Information Geography*, August 18-20, 2025, Chengdu, China.  
+9. Oral presentation (2025): PyGRF: An improved Python Geographical Random Forest model and case studies in public health and natural disasters, *the 4th Intelligent Surveying and Mapping Symposium*, June 13-15, 2025, Guangzhou, China.  
+8. Oral presentation (2024): PyGRF: An improved Python Geographical Random Forest model and case studies in public health and natural disasters, *2024 Esri User Conference: Innovations in GI Science*, July 15-19, 2024, San Diego, California, USA.  
+7. Poster presentation (2024): GALLOC: A GeoAnnotator for Labeling LOCation descriptions from disaster-related text messages, *2024 CaGIS + UCGIS Symposium*, June 3-6, 2024, Columbus, Ohio, USA.  
+6. Oral presentation (2023): GALLOC: A GeoAnnotator for Labeling LOCation descriptions from disaster-related text messages, *the 4th Spatial Data Science Symposium*, September 5-6, 2023, Online.  
+5. Oral presentation (2023): GALLOC: A GeoAnnotator for Labeling LOCation descriptions from disaster-related text messages, *International Symposium on Location-Based Big Data and GeoAI*, August 12, 2023, Online.  
+4. Oral presentation (2022): Geospatial data ontology: the semantic foundation of geospatial data integration and sharing, *International Training Workshop on Resource & Environment Scientific Data Sharing and Disaster Risk Reduction Knowledge Service along the Belt and Road*, November 20-24, 2022, Online.  
+3. Oral presentation (2022): Aligning geographic entities from historical maps based on spatial mapping transformation, *the 5th International Conference on Big Earth Data*, November 12-13, 2022, Online.  
+2. Oral presentation (2021): Geospatial data ontology: the semantic foundation of geospatial data integration and sharing, *the 19th International Conference on Spatial Data Handling and Geographic Intelligence*, August 13-14, 2021, Online.  
+1. Oral presentation (2015): Morphology-Ontology of Geospatial Data and its Application in Data Discovery, *the 23rd International Conference on Geoinformatics*, June 19-21, 2015, Wuhan, China.
