--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,4 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+1\. GEO 514: GIS and Machine Learning (Spring 2024, at University at Buffalo)
